--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>LISTIFY</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/cart.png" type="image/x-icon">
+    <link rel="manifest" href="./manifest.json">
+
+    <script>
+        if ('serviceWorker' in navigator) {
+          window.addEventListener('load', () => {
+            navigator.serviceWorker.register('./(sw.js');
+          });
+        }
+    </script>
 </head>
 <body>
     <div class="nav">
